add support do latex fonts

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Meu Currículo</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css">
     <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="latinmodern-roman-demi.css" type="text/css" charset="utf-8" />
 </head>
 <body>
 
